--- a/06_contact_book/ios/Runner/Info.plist
+++ b/06_contact_book/ios/Runner/Info.plist
@@ -41,5 +41,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Este app precisa de permissao para abrir tua galeria</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Este app precisa de permissao para abrir tua galeria</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Este app precisa de permissao para abrir tua galeria</string>
 </dict>
 </plist>
